// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleTagGatewayToggle should render in default state 1`] = `
<div>
  <div
    class="googlesitekit-google-tag-gateway-toggle"
  >
    <div
      class="googlesitekit-module-settings-group__switch"
    >
      <div
        aria-checked="false"
        class="mdc-switch"
        role="switch"
        tabindex="0"
      >
        <div
          class="mdc-switch__track"
        >
           
        </div>
        <div
          class="mdc-switch__thumb-underlay"
        >
          <div
            class="mdc-switch__thumb"
          >
            <input
              class="mdc-switch__native-control"
              id="googlesitekit-switch-4"
              readonly=""
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <label
        class=""
        for="googlesitekit-switch-4"
      >
        Google tag gateway for advertisers
      </label>
      <div
        class="googlesitekit-google-tag-gateway-toggle__switch-badge"
      >
        <span
          class="googlesitekit-badge googlesitekit-new-badge googlesitekit-badge--has-left-spacing"
        >
          New
        </span>
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about Google tag gateway for advertisers (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://sitekit.withgoogle.com/support/?doc=google-tag-gateway-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;

exports[`GoogleTagGatewayToggle should render in disabled state if server requirements are not met 1`] = `
<div>
  <div
    class="googlesitekit-google-tag-gateway-toggle"
  >
    <div
      class="googlesitekit-module-settings-group__switch"
    >
      <div
        aria-checked="false"
        class="mdc-switch mdc-switch--disabled"
        role="switch"
        tabindex="0"
      >
        <div
          class="mdc-switch__track"
        >
           
        </div>
        <div
          class="mdc-switch__thumb-underlay"
        >
          <div
            class="mdc-switch__thumb"
          >
            <input
              class="mdc-switch__native-control"
              disabled=""
              id="googlesitekit-switch-6"
              readonly=""
              role="switch"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <label
        class=""
        for="googlesitekit-switch-6"
      >
        Google tag gateway for advertisers
      </label>
      <div
        class="googlesitekit-google-tag-gateway-toggle__switch-badge"
      >
        <span
          class="googlesitekit-badge googlesitekit-new-badge googlesitekit-badge--has-left-spacing"
        >
          New
        </span>
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about Google tag gateway for advertisers (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://sitekit.withgoogle.com/support/?doc=google-tag-gateway-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
    <div
      class="googlesitekit-notice googlesitekit-notice--warning"
    >
      <div
        class="googlesitekit-notice__icon"
      >
        <svg />
      </div>
      <div
        class="googlesitekit-notice__content"
      >
        <p
          class="googlesitekit-notice__title"
        >
          Your server’s current settings prevent Google tag gateway for advertisers from working. To enable it, please contact your hosting provider and request access to external resources and plugin files. 
          <a
            aria-label="Learn more about Google tag gateway for advertisers server requirements (opens in a new tab)"
            class="googlesitekit-cta-link"
            href="https://sitekit.withgoogle.com/support/?doc=google-tag-gateway-server-requirements"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="googlesitekit-cta-link__contents"
            >
              Learn more
            </span>
            <span
              class="googlesitekit-icon-wrapper"
              style="margin-left: 5px;"
            >
              <svg />
            </span>
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GoogleTagGatewayToggle should render in loading state if the server requirement status is still loading 1`] = `
<div>
  <div
    class="googlesitekit-google-tag-gateway-toggle"
  >
    <div
      class="mdc-linear-progress googlesitekit-google-tag-gateway-toggle__progress mdc-linear-progress--indeterminate mdc-linear-progress--small"
      role="progressbar"
      style="height: 4px;"
    >
      <div
        class="mdc-linear-progress__buffering-dots"
      />
      <div
        class="mdc-linear-progress__buffer"
      />
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
    </div>
    <p
      class="googlesitekit-module-settings-group__helper-text"
    >
      Your tag data will be sent through your own domain to improve data quality and help you recover measurement signals. 
      <a
        aria-label="Learn more about Google tag gateway for advertisers (opens in a new tab)"
        class="googlesitekit-cta-link"
        href="https://sitekit.withgoogle.com/support/?doc=google-tag-gateway-introduction"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="googlesitekit-cta-link__contents"
        >
          Learn more
        </span>
        <span
          class="googlesitekit-icon-wrapper"
          style="margin-left: 5px;"
        >
          <svg />
        </span>
      </a>
    </p>
  </div>
</div>
`;
